--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
 {% import 'macros.html' as macro %}
 
 {% block content%}
-<div class="container" style="color: white; background-image: url('https://res.cloudinary.com/drrezzrvd/image/upload/v1568464281/images_1_hg7jgo.jpg'); background-repeat: no-repeat; background-size: cover; width: 80%">
+<div class="container" style="color:rgb(31, 191, 202); background-image: url('https://images.unsplash.com/photo-1606017259066-546f13c8c90d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw4M3x8fGVufDB8fHw%3D&auto=format&fit=crop&w=500&q=60'); background-repeat: no-repeat; background-size: cover; width: 80%">
 
-    <h2 style="text-align: center"> Top Technology News Sources</h2>
+    <h2 style="text-align: center"> Top News Sources</h2>
     <hr>
     {{macro.displaySourceList(technology_sources)}}
 
