--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="jumbotron text-center">
         <h2>The pages you are trying to access is not Available</h2>
-        <p></p><a href="/" class="btn btn-success">Home</a>
+        <p></p><a href="/" class="btn btn-warning">Home</a>
 
     </div>
 
