--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 {% block content%}
-<div class="container" style="background-image: url('https://res.cloudinary.com/drrezzrvd/image/upload/v1568464281/images_1_hg7jgo.jpg'); background-repeat: no-repeat; background-size: cover; width: 80%">
-	<h2 style="color: white; text-align:center" >Top Articles</h2>
+<div class="container" style="background-image: url('https://images.unsplash.com/photo-1606009589462-ec3eecbea20a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3NXx8fGVufDB8fHw%3D&auto=format&fit=crop&w=500&q=60'); background-repeat: no-repeat; background-size: cover; width: 80%">
+	<h2 style="color:red; text-align:center" >Top Articles</h2>
 	{% for article_row in articles | batch(4)%}
     <div class="row">
 		{% for article in article_row%}
 		<div class="col-md-3">
 			<div class="thumbnail"style="background-color: transparent; text-align:center">
 				<a href="{{article.url}}" target="_blank"><img src="{{article.image}}" alt="{{article.title}}" class="img-responsive" style="height:30px"></a>
-				<div class="caption" style="color: white">
-					<h4><a href ="{{article.url}}" target="_blank"  style="color: white">{{article.title | truncate(35)}}</a></h4>
+				<div class="caption" style="color:black">
+					<h4><a href ="{{article.url}}" target="_blank"  style="color: black">{{article.title | truncate(35)}}</a></h4>
 					<p>{{article.decription | truncate(80)}}</p>
 					<a href="{{article.url}}" target="_blank"><strong>Read More</strong></a>
 				</div>
-					<div class="footer" style="color: white">
+					<div class="footer" style="color:green">
 						Published at:{{article.date}}
 
 					</div>
